packages/web-components/src/components/tabs/tabs.scss
//
// Copyright IBM Corp. 2019, 2026
//
// This source code is licensed under the Apache-2.0 license found in the
// LICENSE file in the root directory of this source tree.
//

@use '@carbon/styles/scss/config' as *;
@use '@carbon/styles/scss/theme' as *;
@use '@carbon/styles/scss/utilities' as *;
@use '@carbon/styles/scss/breakpoint' as *;
@use '@carbon/styles/scss/spacing' as *;
@use '@carbon/styles/scss/motion' as *;
@use '@carbon/styles/scss/type' as *;
@use '@carbon/styles/scss/components/button/index' as *;
@use '@carbon/styles/scss/components/tabs/index';
@use '@carbon/styles/scss/components/tabs/vars' as *;
@use '@carbon/styles/scss/utilities/button-reset';
@use '@carbon/styles/scss/layout' as *;
@use '@carbon/styles/scss/utilities/layout';
@use '@carbon/styles/scss/utilities/convert';
@use '@carbon/styles/scss/utilities/skeleton' as *;

$inset-transition: inset 110ms motion(standard, productive);

:host(#{$prefix}-tabs),
:host(#{$prefix}-tabs-skeleton) {
  @extend .#{$prefix}--tabs;
  @include emit-layout-tokens();
  .#{$prefix}--tabs-nav-content-container {
    position: relative;
    overflow: scroll;
    flex: 1 1 0%;
    // for some reason, overflow: hidden shrinks the content
    block-size: $spacing-08;
    scrollbar-width: none;

    &::-webkit-scrollbar {
      display: none;
    }
  }

  /* Set to zero-specificity so it can be overridden by dynamic stylesheet */
  :where(.#{$prefix}--tabs-nav-content) {
    position: absolute;
    block-size: 100%;
    inset-inline-start: 0;
    transition: $inset-transition;
  }

  .#{$prefix}--tabs-nav {
    position: absolute;
    display: block;
  }

  .#{$prefix}--tab--overflow-nav-button {
    z-index: 1;
  }

  .#{$prefix}--tab--overflow-nav-button {
    background-color: var(--tabs-overflow-button-background, $background);
  }
}

:host(#{$prefix}-tabs) {
  @include focus-outline('reset');

  .#{$prefix}--tabs-trigger svg {
    block-size: auto;
    inline-size: auto;
  }
}

:host(#{$prefix}-tabs:focus) {
  .#{$prefix}--tabs-trigger {
    @include focus-outline('outline');
  }
}

:host(#{$prefix}-tabs[icon-size='default'])
  .#{$prefix}--tabs-nav-content-container,
:host(#{$prefix}-tabs.#{$prefix}--tabs__icon--default)
  .#{$prefix}--tabs-nav-content-container {
  overflow: visible;
  block-size: $spacing-08;
}

:host(#{$prefix}-tabs[icon-size='lg']) .#{$prefix}--tabs-nav-content-container,
:host(#{$prefix}-tabs.#{$prefix}--tabs__icon--lg)
  .#{$prefix}--tabs-nav-content-container {
  overflow: visible;
  block-size: $spacing-09;
}

:host(#{$prefix}-tabs[icon-size='default']),
:host(#{$prefix}-tabs[icon-size='lg']),
:host(#{$prefix}-tabs.#{$prefix}--tabs__icon--default),
:host(#{$prefix}-tabs.#{$prefix}--tabs__icon--lg) {
  overflow: visible;

  .#{$prefix}--tab--list {
    overflow: visible;
  }
}

:host(#{$prefix}-tab),
:host(#{$prefix}-tab-skeleton) {
  display: flex;
  background: transparent;
  inline-size: 100%;

  .#{$prefix}--tabs__nav-item-label-wrapper {
    display: flex;
    gap: $spacing-03;
  }

  .#{$prefix}--tabs__nav-link {
    @include button-reset.reset($width: false);
    @include focus-outline('reset');
    @include type-style('body-compact-01');

    position: relative;
    overflow: hidden;

    align-items: center;
    padding: $spacing-04 $spacing-05 $spacing-03;
    border-block-end: $tab-underline-color;
    color: $text-secondary;
    inline-size: 100%;
    text-align: start;
    text-decoration: none;
    text-overflow: ellipsis;
    transition:
      border $duration-fast-01 motion(standard, productive),
      outline $duration-fast-01 motion(standard, productive);
    white-space: nowrap;

    &:focus,
    &:active {
      @include focus-outline('outline');
    }
  }

  outline: none;
}

:host(#{$prefix}-tab:not([type='contained'])) {
  .#{$prefix}--tabs__nav-link {
    padding-block-end: calc(#{$spacing-03} + #{convert.to-rem(1px)});
    padding-block-start: calc(#{$spacing-04} - #{convert.to-rem(1px)});
  }
}

:host(#{$prefix}-tab:not([type='contained']))
  + :host(#{$prefix}-tab:not([type='contained'])) {
  margin-inline-start: convert.to-rem(1px);
}

:host(#{$prefix}-tab[badge-indicator][icon-only]:not([icon-size='lg']))
  #{$prefix}-badge-indicator,
:host(
    #{$prefix}-tab[badge-indicator].#{$prefix}--tabs__nav-item--icon-only:not(
        .#{$prefix}--tabs__nav-item--icon-only__20
      )
  )
  #{$prefix}-badge-indicator {
  margin-block-start: $spacing-02;
  margin-inline-end: $spacing-02;
}

:host(#{$prefix}-tab[icon-only]),
:host(#{$prefix}-tab.#{$prefix}--tabs__nav-item--icon-only) {
  flex: 0 0 auto;
  block-size: $spacing-08;
  inline-size: $spacing-08;

  .#{$prefix}--tabs__nav-item-label-wrapper {
    display: flex;
  }

  #{$prefix}-tooltip {
    display: block;
    block-size: 100%;
    inline-size: 100%;
    --#{$prefix}-tooltip-padding-block: #{convert.to-rem(2px)};
    --#{$prefix}-popover-caret-width: #{convert.to-rem(8px)};
    --#{$prefix}-popover-caret-height: #{convert.to-rem(4px)};
    --#{$prefix}-popover-offset: #{convert.to-rem(8px)};
  }

  #{$prefix}-tooltip::part(popover-container) {
    display: block;
    block-size: 100%;
    inline-size: 100%;
  }

  .#{$prefix}--tabs__nav-link {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 0;
    block-size: 100%;
    inline-size: 100%;
  }

  ::slotted(svg) {
    display: block;
    fill: currentColor;
  }
}

:host(#{$prefix}-tab[icon-only]:not([type='contained'])),
:host(
    #{$prefix}-tab.#{$prefix}--tabs__nav-item--icon-only:not([type='contained'])
  ) {
  .#{$prefix}--tabs__nav-item-label-wrapper {
    position: relative;
    inset-block-start: convert.to-rem(1px);
  }
}

:host(#{$prefix}-tab[icon-only][icon-size='lg']),
:host(#{$prefix}-tab.#{$prefix}--tabs__nav-item--icon-only__20) {
  block-size: $spacing-09;
  inline-size: $spacing-09;
}
/* ... */

