fix(tabs): revert align change

--- a/packages/web-components/src/components/tabs/tabs.scss
+++ b/packages/web-components/src/components/tabs/tabs.scss
@@ -111,6 +111,7 @@ $inset-transition: inset 110ms motion(standard, productive);
 
   .#{$prefix}--tabs__nav-item-label-wrapper {
     display: flex;
+    align-items: center;
     gap: $spacing-03;
   }
 
